--- a/src/App.css
+++ b/src/App.css
@@ -49,6 +49,12 @@ body,
   text-align: center;
 }
 
+.loading-indicator {
+  position: fixed;
+  right: 50px;
+  bottom: 110px;
+}
+
 .open-search {
   position: fixed;
   right: 25px;
